lib-herdr/website/src/content/docs/_versions/0.6.9/index.mdx
---
editUrl: https://github.com/herdrdev/herdr/blob/master/docs/versions/0.6.9/website/src/content/docs/index.mdx
title: Herdr documentation
description: Terminal-native agent runtime and multiplexer.
template: splash
hero:
  tagline: "One terminal for the whole herd: real panes, persistent sessions, SSH attach, state awareness, and CLI/socket orchestration."
  image:
    file: ../../../../../public/assets/logo.svg
  actions:
    - text: Install Herdr
      link: /docs/0.6.9/install/
    - text: Quick start
      link: /docs/0.6.9/quick-start/
      variant: secondary
---

import { Card, CardGrid } from '@astrojs/starlight/components';

Herdr is a terminal-native agent runtime and multiplexer. It gives the whole herd persistent terminal workspaces with panes, tabs, mouse control, state awareness, and an API that agents can use themselves.

```bash
curl -fsSL https://herdr.dev/install.sh | sh
herdr
```

On Windows preview beta:

```powershell
powershell -ExecutionPolicy Bypass -c "irm https://herdr.dev/install.ps1 | iex"
herdr
```

## Start here

<CardGrid>
  <Card title="Install">
    Install stable Herdr on Linux/macOS or the Windows preview beta, update it later, and verify the binary.

    [Install Herdr →](/docs/0.6.9/install/)
  </Card>
  <Card title="Quick start">
    Create your first workspace, run an agent, split panes, and detach safely.

    [Start using Herdr →](/docs/0.6.9/quick-start/)
  </Card>
  <Card title="Local, SSH, and mobile">
    Run Herdr locally, inside SSH, from your phone, or through `herdr --remote`.

    [Pick a workflow →](/docs/0.6.9/how-to-work/)
  </Card>
  <Card title="Agents">
    See supported agents, detection behavior, integrations, custom labels, and direct attach.

    [Understand agents →](/docs/0.6.9/agents/)
  </Card>
  <Card title="Session state">
    Understand detach, restart restore, pane history replay, native agent resume, and live handoff.

    [Compare state paths →](/docs/0.6.9/session-state/)
  </Card>
  <Card title="Configuration">
    Configure keybindings, themes, sidebar behavior, notifications, scrollback, and advanced options.

    [Configure Herdr →](/docs/0.6.9/configuration/)
  </Card>
  <Card title="API">
    Control Herdr from scripts, tools, and agents through the CLI and local socket API.

    [Read the API guide →](/docs/0.6.9/socket-api/)
  </Card>
</CardGrid>
